<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sifat_sifat_umum"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:padding="8dp">

            <TableRow
                style="@style/tableRowLayout">
                <TextView
                    style="@style/nomerTable"
                    android:text="1."/>

                <TextView
                    style="@style/isiTable"
                    android:text="@string/SifatBalok1"/>
            </TableRow>

            <TableRow
                style="@style/tableRowLayout">
                <TextView
                    style="@style/nomerTable"
                    android:text="2."/>

                <TextView
                    style="@style/isiTable"
                    android:text="@string/SifatBalok2"/>
            </TableRow>

            <TableRow
                style="@style/tableRowLayout">
                <TextView
                    style="@style/nomerTable"
                    android:text="3."/>

                <TextView
                    style="@style/isiTable"
                    android:text="@string/SifatBalok3"/>
            </TableRow>

            <TableRow
                style="@style/tableRowLayout">
                <TextView
                    style="@style/nomerTable"
                    android:text="4."/>

                <TextView
                    style="@style/isiTable"
                    android:text="@string/SifatBalok4"/>
            </TableRow>

            <TableRow
                style="@style/tableRowLayout">
                <TextView
                    style="@style/nomerTable"
                    android:text="5."/>

                <TextView
                    style="@style/isiTable"
                    android:text="@string/SifatBalok5"/>
            </TableRow>

            <TableRow
                style="@style/tableRowLayout">
                <TextView
                    style="@style/nomerTable"
                    android:text="6."/>

                <TextView
                    style="@style/isiTable"
                    android:text="@string/SifatBalok6"/>
            </TableRow>

            <TableRow
                style="@style/tableRowLayout">
                <TextView
                    style="@style/nomerTable"
                    android:text="7."/>

                <TextView
                    style="@style/isiTable"
                    android:text="@string/SifatBalok7"/>
            </TableRow>

            <TableRow
                style="@style/tableRowLayout">
                <TextView
                    style="@style/nomerTable"
                    android:text="8."/>

                <TextView
                    style="@style/isiTable"
                    android:text="@string/SifatBalok8"/>
            </TableRow>

            <TableRow
                style="@style/tableRowLayout">
                <TextView
                    style="@style/nomerTable"
                    android:text="9."/>

                <TextView
                    style="@style/isiTable"
                    android:text="@string/SifatBalok9"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>